k8s/00-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
