k8s/20-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: app/nextjs:v2            # собери новый тег!
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: "/", port: 3000 }
            initialDelaySeconds: 5
          livenessProbe:
            httpGet: { path: "/", port: 3000 }
            initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: app
spec:
  selector:
    app: nextjs
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
