k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: nextjs, port: { number: 80 } }
          - path: /api
            pathType: Prefix
            backend:
              service: { name: go-api, port: { number: 80 } }
